force-app/main/default/objects/Brand_Rate__c/Brand_Rate__c.object-meta.xml
<CustomObject>
    <description>Client specific rates</description>
    <label>Brand Rate</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Brand Rates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>