force-app/main/default/objects/Brand_Rate__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Brand Account for this Rate</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brand Rates</relationshipLabel>
    <relationshipName>Brand_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>