force-app/main/default/objects/Brand_Rate__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Name of Position for this Rate</description>
    <inlineHelpText>Name of Position for this Rate</inlineHelpText>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Managing Partner/EVP</fullName>
            </value>
            <value>
                <fullName>Senior Vice President</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
            <value>
                <fullName>Senior Director</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Senior Manager</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Associate Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>