force-app/main/default/objects/Brand_Rate__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>Hourly Rate</description>
    <inlineHelpText>Hourly Rate</inlineHelpText>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>